Reduce code smell